--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       
       <a href="#" class="btn cyber-btn" data-testid="join-btn">
         <span class="btn-text">Join Us</span>
-        <span class="btn-glitch">Join Us</span>
       </a>
     </nav>
   </header>
@@ -103,12 +102,12 @@
       </div>
     </div>
     
-    <div class="scroll-indicator">
+    <!-- <div class="scroll-indicator">
       <div class="mouse">
         <div class="wheel"></div>
       </div>
       <p>Scroll Down</p>
-    </div>
+    </div> -->
   </section>
 
   <!-- About Section -->
@@ -412,10 +411,11 @@
     <canvas id="footer-particles"></canvas>
   </footer>
 
-  <!-- Scripts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-  <script src="script.js"></script>
+<script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
+<script src="https://unpkg.com/gsap@3.12.2/dist/gsap.min.js"></script>
+<script src="https://unpkg.com/gsap@3.12.2/dist/ScrollTrigger.min.js"></script>
+
+<!-- Load your main JS -->
+<script src="script.js"></script>
 </body>
 </html>
